--- a/public/style.css
+++ b/public/style.css
@@ -635,6 +635,7 @@ div.descWhy {
 
 .judul-tentangkami {
     padding-left: 3vw;
+
 }
 
 .judul-tentangkami h5{
@@ -678,7 +679,7 @@ div.descWhy {
     margin-top: 33vh;
 }
 
-.button-tentangkami-FAQ a:hover{
+.button-tentangkami-FAQ:hover{
     color: #18a4fc;
     background: none;
 }
@@ -700,9 +701,10 @@ div.descWhy {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
     margin-left: 7vw;
+    margin-bottom: 100px;
 }
 
-.button-tentangkami-contactus a:hover{
+.button-tentangkami-contactus:hover{
     color: #18a4fc;
     background: none;
 }
@@ -804,6 +806,7 @@ div.descWhy {
     padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
+    box-shadow: none;
 }
 
 #login .col-form-label{
@@ -817,6 +820,12 @@ button, input, optgroup, select, textarea {
     background-color: #18a4fc;
     font-weight: bold;
     border-color: #18a4fc;
+    border: 2px solid #18a4fc;
+}
+
+#login .btn-primary:hover{
+    color: #18a4fc;
+    background: none;
 }
 
 #login .box-login .box-akun{
@@ -834,9 +843,9 @@ button, input, optgroup, select, textarea {
     padding-top: 150px;
     display: flex;
 }
-#recovery #image{
-    width: 50px;
-    padding-left: 350px;
+#recovery img{
+    padding-left: 300px;
+    width: 90%;
 }
 
 #recovery .btn{
@@ -846,8 +855,8 @@ button, input, optgroup, select, textarea {
 }
 
 #recovery .box-login{
-    margin-top: 10vh;
-    margin-left: 25vw;
+    margin-top: 12vh;
+    margin-left: 7vw;
 }
 
 #recovery .col-sm-10{
@@ -859,6 +868,12 @@ button, input, optgroup, select, textarea {
     padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
+    box-shadow: none;
+}
+
+#recovery .btn-primary:hover{
+    color: #18a4fc;
+    background: none;
 }
 
 #recovery .col-form-label{
@@ -872,6 +887,7 @@ button, input, optgroup, select, textarea {
     background-color: #18a4fc;
     font-weight: bold;
     border-color: #18a4fc;
+    border: 2px solid #18a4fc;
 }
 
 #recovery .box-login .box-akun{
@@ -898,9 +914,9 @@ button, input, optgroup, select, textarea {
     padding-top: 150px;
     display: flex;
 }
-#signup #image{
-    width: 50px;
-    padding-left: 350px;
+#signup img{
+    padding-left: 300px;
+    width: 90%;
 }
 
 #signup .btn{
@@ -910,8 +926,8 @@ button, input, optgroup, select, textarea {
 }
 
 #signup .box-login{
-    margin-top: 10vh;
-    margin-left: 25vw;
+    margin-top: 8vh;
+    margin-left: 7vw;
 }
 
 #signup .col-sm-10{
@@ -923,6 +939,7 @@ button, input, optgroup, select, textarea {
     padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
+    box-shadow: none;
 }
 
 #signup .col-form-label{
@@ -936,7 +953,14 @@ button, input, optgroup, select, textarea {
     background-color: #18a4fc;
     font-weight: bold;
     border-color: #18a4fc;
+    border: 2px solid #18a4fc;
 }
+
+#signup .btn-primary:hover{
+    color: #18a4fc;
+    background: none;
+}
+
 #signup .box-login .box-akun{
     padding-top: 2vh;
     padding-left: 6vw;
@@ -963,6 +987,7 @@ button, input, optgroup, select, textarea {
     font-weight: bold;
     padding-top: 50px;
     padding-left: 200px;
+    font-family: Nunito;
 }
 #recoverysend #text h2{
     font-size: 24px;
@@ -990,8 +1015,18 @@ button, input, optgroup, select, textarea {
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
+    font-family: Nunito;
 }
 
+#recoverysend #text #button:hover{
+    color: #18a4fc;
+    background: none;
+}
+
+#recoverysend #text{
+    margin-left: -6vw;
+    margin-top: 5vh;
+}
 
 /* Requestsend =============================================================================================== */
 #requestsend{
@@ -1000,32 +1035,37 @@ button, input, optgroup, select, textarea {
     height: 500px;
 }
 #requestsend #paragraft h1{
-    padding-top: 80px;
+    padding-top: 90px;
     padding-left: 80px;
     font-size: 24px;
     font-weight: bolder;
+    font-family: Nunito;
 }
 #requestsend #paragraft h2{
-    padding-left: 80px;
+    padding-left: 90px;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: bolder;
+    font-family: Nunito;
 }
 #requestsend #paragraft h2 li{
     padding-left: 20px;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: bolder;
+    font-family: Nunito;
 }
 #requestsend #paragraft2 #border img{
     z-index: -1;
     position: absolute;
     width: 50%;
     padding-left: 40px;
+    font-family: Nunito;
 }
 #requestsend #paragraft2 #permintaan{
     display: flex;
     flex-direction: row;
     margin-left: 420px;
-    margin-top: 65px;
+    margin-top: 78px;
+    font-family: Nunito;
 }
 #requestsend #paragraft2 #permintaan h1{
     padding-top: 10px;
@@ -1033,16 +1073,19 @@ button, input, optgroup, select, textarea {
     font-size: 24px;
     font-weight: bold;
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 38%;
+    font-family: Nunito;
 }
 
 #requestsend #paragraft2 h2{
+    padding-top: 50px;
     padding-left: 200px;
     font-size: 18px;
     position: absolute;
-    top: 50%;
+    top: 52%;
     left: 38%;
+    font-family: Nunito;
 }
 #requestsend #paragraft2 h3{
     padding-left: 200px;
@@ -1050,17 +1093,20 @@ button, input, optgroup, select, textarea {
     position: absolute;
     top: 55%;
     left: 38%;
+    font-family: Nunito;
 }
 #requestsend #paragraft2 h4{
     padding-left: 200px;
     font-size: 18px;
     position: absolute;
-    top: 60%;
+    top: 64%;
     left: 38%;
+    font-family: Nunito;
 }
 /* updateprofil =============================================================================================== */
 #profil {
     display:flex;
+    justify-content: space-between;
 }
 #profil #button {
     display:flex;
@@ -1084,6 +1130,12 @@ button, input, optgroup, select, textarea {
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
 }
+
+#profil #button #batal:hover{
+    color: #18a4fc;
+    background: none;
+}
+
 #profil #button #simpan{
     display: inline-block;
     background: #18a4fc;
@@ -1092,22 +1144,27 @@ button, input, optgroup, select, textarea {
     font-size: 17px;
     padding: 5px 50px;
     margin-top: 20px;
-    margin-left: 50px;
+    margin-left: 20px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
 }
+
+#profil #button #simpan:hover{
+    color: #18a4fc;
+    background: none;
+}
+
 #profil #memberupdate {
     display: flex;
 }
 #profil #memberupdate h3{
     margin-top: 20px;
-    margin-left: 50px;
     font-weight: bold;
     font-size: 17px;
     margin-right: 20px;
 
 }
-#profil #memberupdate #perbarui{
+#profil #box-gambar #memberupdate #Perbarui{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
@@ -1117,6 +1174,11 @@ button, input, optgroup, select, textarea {
     margin-top: 10px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
+}
+
+#profil #box-gambar #memberupdate #Perbarui:hover{
+    color: #18a4fc;
+    background: none;
 }
 
 #profil .box-login{
@@ -1130,6 +1192,7 @@ button, input, optgroup, select, textarea {
     padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
+    box-shadow: none;
 }
 
 #profil.col-form-label{
@@ -1141,9 +1204,21 @@ button, input, optgroup, select, textarea {
 }
 
 #profil #imageupdateprofile img{
-    width: 60%;
-    margin-left: 400px;
+    width: 80%;
 }
+
+#profil #box-gambar{
+    display: flex;
+    flex-direction: column;
+    margin-top: 10vh;
+    margin-right: 10vw;
+}
+
+#profil #box-gambar #textmembership h5{
+    font-family: Nunito;
+    font-weight: bold;
+}
+
 /* pickup =============================================================================================== */
 #pickup{
     padding-top: 120px;
@@ -1170,7 +1245,6 @@ button, input, optgroup, select, textarea {
     z-index: -1;
     position: absolute;
     width: 70%;
-
     padding-left: 350px;
 }
 #pickup #paragraft2 #permintaan{
@@ -1186,22 +1260,24 @@ button, input, optgroup, select, textarea {
     font-weight: bold;
     position: absolute;
     left: 45%;
-    top: 33%;
+    top: 40%;
 }
 
 #pickup #paragraft2 h2{
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 48.5%;
+    font-weight: bolder;
 }
 #pickup #paragraft2 h3{
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 48.5%;
+    font-weight: bolder;
 }
 
 #pickup .box-login{
@@ -1219,6 +1295,7 @@ button, input, optgroup, select, textarea {
     padding: 0.5vh;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
+    box-shadow: none;
 }
 
 #pickup.col-form-label{
@@ -1243,24 +1320,28 @@ button, input, optgroup, select, textarea {
 }
 
 #pickup #paragraft2 #button {
+    background-color: #18a4fc;
+    border: none;
+    color: #fff;;
+    border-radius: 8px;
+    padding: 5px 250px;
+    text-align: center;
+    text-decoration: none;
     display: inline-block;
-    background: #18a4fc;
-    color: #fff;
-    font-weight: bold;
-    font-size: 17px;
-    padding: 5px 20px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid #18a4fc;
-    transition: all 0.3s ease;
-    margin-right: 22vw;
+    font-size: 18px;
+    margin: 4px 2px;
+    cursor: pointer;
     position: absolute;
-    top: 60%;
-    left: 52%;
+    top: 70%;
+    left: 50%;
 }
 #pickup #paragraft2 #button{
     display: flex;
     flex-direction: row;
+}
+
+#pickup #paragraft .box-login-2 .form-control{
+    padding-bottom: 3vw;
 }
 
 /* ini paymenttt ======================================================================================*/
@@ -1379,19 +1460,24 @@ button, input, optgroup, select, textarea {
     font-weight: bolder;
 }
 
-#paymentmembership #paymentbox2 #button{
+#paymentmembership #paymentbox2 #button {
     display: inline-block;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
     font-size: 17px;
     padding: 5px 20px;
-    margin-top: 20px;
+    margin-top: 50px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
-    transition: all 0.3s ease;
     margin-right: 0vw;
-    margin-left: 23vw
+    margin-left: 23vw;
+    cursor: pointer;
+}
+
+#paymentmembership #paymentbox2 #button a{
+    text-decoration: none;
+    color: white;
 }
 
 #paymentmembership #paymentbox1 .kotak{
@@ -1459,13 +1545,16 @@ button, input, optgroup, select, textarea {
 }
 
 #paymentmembership #paymentbox2 .kotak #paragraf1 h6 {
+    margin-top: 20px;
     font-weight: bolder;
 }
 
 #paymentmembership #paymentbox2 .kotak #paragraf2 h6 {
+    margin-top: 15px;
     font-weight: bolder;
 }
 #paymentmembership #paymentbox2 .kotak #paragraf2 h2 {
+    margin-top: 15px;
     font-weight: bolder;
     margin-left: 385px;
     font-size: 17px;
@@ -1635,4 +1724,54 @@ button, input, optgroup, select, textarea {
     margin-top: 4vh;
     margin-left: 3vw;
 }
+/* paymentreceived=============================================================================== */
+#paymentreceived{
+    padding-top: 130px;
+    display: flex;
+    height: 500px;
+}
+#paymentreceived img{
+    padding-left: 500px;
+    width: 80%;
+}
+#paymentreceived #text #payment{
+    display: flex;
 
+}
+#paymentreceived #text #payment img{
+    padding-left: 0px;
+    width: 100%;
+    padding-top: 35px;
+}
+#paymentreceived #text #payment h1{
+    font-size: 24px;
+    font-weight: bold;
+    padding-top: 50px;
+    padding-left: 80px;
+    font-family: Nunito;
+}
+#paymentreceived #text h2{
+    font-size: 24px;
+    padding-top: 30px;
+    padding-left: 80px;
+    font-family: Nunito;
+    font-weight: 400;
+}
+#paymentreceived #text #button{
+    display: inline-block;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    margin-left: 80px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+    font-family: Nunito;
+}
+#paymentreceived #text #button:hover{
+    color:  #18a4fc;
+    background: none;
+}
