--- a/public/style.css
+++ b/public/style.css
@@ -840,7 +840,13 @@ button, input, optgroup, select, textarea {
     margin-top: -25px;
     position: relative;
     z-index: 2;
-  }
+}
+#login form i {
+    margin-left: 270px;
+    cursor: pointer;
+    display: flex;
+    margin-top: -25px;
+}
 /* Recovery =============================================================================================== */
 #recovery{
     padding-top: 150px;
@@ -957,6 +963,12 @@ button, input, optgroup, select, textarea {
 #signup .box-login .box-akun a{
     text-decoration-color: black;
     color: black;
+}
+#signup form i {
+    margin-left: 270px;
+    cursor: pointer;
+    display: flex;
+    margin-top: -25px;
 }
 /* Recoverysend =============================================================================================== */
 #recoverysend{
@@ -1208,7 +1220,7 @@ button, input, optgroup, select, textarea {
 }
 /* pickup =============================================================================================== */
 #pickup{
-    padding-top: 120px;
+    padding-top: 50px;
     display: flex;
     height: 500px;
 }
@@ -1241,19 +1253,18 @@ button, input, optgroup, select, textarea {
     margin-top: 65px;
 }
 #pickup #paragraft2 h1{
-    padding-top: 10px;
     padding-left: 100px;
     font-size: 24px;
     font-weight: bold;
     position: absolute;
     left: 45%;
-    top: 40%;
+    top: 30%;
 }
 #pickup #paragraft2 h2{
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 48.5%;
     font-weight: bolder;
 }
@@ -1261,7 +1272,7 @@ button, input, optgroup, select, textarea {
     padding-left: 50px;
     font-size: 18px;
     position: absolute;
-    top: 55%;
+    top: 45%;
     left: 48.5%;
     font-weight: bolder;
 }
@@ -1311,8 +1322,12 @@ button, input, optgroup, select, textarea {
     margin: -15px 2px;
     cursor: pointer;
     position: absolute;
-    top: 70%;
+    top: 60%;
     left: 50%;
+}
+#pickup #paragraft2 #button a{
+    text-decoration: none;
+    color: white;
 }
 #pickup #paragraft2 #button{
     display: flex;
@@ -1320,6 +1335,28 @@ button, input, optgroup, select, textarea {
 }
 #pickup #paragraft .box-login-2 .form-control{
     padding-bottom: 3vw;
+}
+#pickup #paragraft #buttonkiri a{
+    display: inline-block;
+    background: #18a4fc;
+    color: white;
+    font-weight: bold;
+    font-size: 17px;
+    padding: 5px 20px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+    margin-left: 3vw;
+    text-decoration: none;
+    color: white;
+}
+#pickup #paragraft #buttonkiri a:hover{
+    color: #18a4fc;
+    background: none;
+}
+#pickup #paragraft{
+    margin-left: 1vw;
 }
 /* ini paymenttt ======================================================================================*/
 #payment{
@@ -1561,7 +1598,6 @@ input[type=radio] + label>img {
     background: none;
 }
 #accordionLaundryku h2{
-    Padding-left: 400px;
     font-weight: bolder;
 }
 #accordionLaundryku h6{
