--- a/public/style.css
+++ b/public/style.css
@@ -1071,27 +1071,28 @@ button, input, optgroup, select, textarea {
 }
 /* Requestsend =============================================================================================== */
 #requestsend{
-    padding-top: 120px;
+    padding-top: 100px;
     display: flex;
     height: 500px;
 }
 #requestsend #paragraft h1{
     padding-top: 40px;
-    padding-left: 80px;
+    padding-left: 51px;
     font-size: 24px;
     font-weight: bolder;
     font-family: Nunito;
+    margin-bottom: 2.5vh;
 }
 #requestsend #paragraft h2{
     padding-left: 50px;
     font-size: 18px;
-    font-weight: bolder;
+    font-weight: bold;
     font-family: Nunito;
 }
 #requestsend #paragraft h2 li{
     padding-left: 20px;
     font-size: 18px;
-    font-weight: bolder;
+    font-weight: bold;
     font-family: Nunito;
 }
 #requestsend #paragraft2 #border img{
@@ -1100,6 +1101,7 @@ button, input, optgroup, select, textarea {
     width: 50%;
     padding-left: 50px;
     font-family: Nunito;
+    margin-left: 3vw;
 }
 #requestsend #paragraft2 #permintaan{
     display: flex;
@@ -1109,8 +1111,7 @@ button, input, optgroup, select, textarea {
     font-family: Nunito;
 }
 #requestsend #paragraft2 #permintaan h1{
-    padding-top: 10px;
-    padding-left: 200px;
+    padding-left: 250px;
     font-size: 24px;
     font-weight: bold;
     position: absolute;
@@ -1120,7 +1121,7 @@ button, input, optgroup, select, textarea {
 }
 #requestsend #paragraft2 h2{
     padding-top: 50px;
-    padding-left: 200px;
+    padding-left: 250px;
     font-size: 18px;
     position: absolute;
     top: 37%;
@@ -1128,20 +1129,22 @@ button, input, optgroup, select, textarea {
     font-family: Nunito;
 }
 #requestsend #paragraft2 h3{
-    padding-left: 200px;
+    padding-left: 250px;
     font-size: 18px;
     position: absolute;
-    top: 51%;
+    /* top: 51%; */
     left: 36%;
     font-family: Nunito;
+    margin-top: 10vh;
 }
 #requestsend #paragraft2 h4{
-    padding-left: 200px;
+    padding-left: 250px;
     font-size: 18px;
     position: absolute;
-    top: 60%;
+    /* top: 60%; */
     left: 36%;
     font-family: Nunito;
+    margin-top: 13vh;
 }
 #requestsend #paragraft2 #button #ok{
     display: inline-block;
@@ -1150,8 +1153,8 @@ button, input, optgroup, select, textarea {
     font-weight: bold;
     font-size: 17px;
     padding: 5px 50px;
-    margin-top: 200px;
-    margin-left: 350px;
+    margin-top: 180px;
+    margin-left: 400px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
@@ -1162,6 +1165,10 @@ button, input, optgroup, select, textarea {
 }
 #requestsend #paragraft2 #button #ok a{
     text-decoration:none;
+}
+#requestsend #paragraft2 #permintaan #image img{
+    margin-left: 3.5vw;
+    margin-top: 2vh;
 }
 /* updateprofil =============================================================================================== */
 #profil {
@@ -1426,6 +1433,10 @@ button, input, optgroup, select, textarea {
 /* ini paymenttt ======================================================================================*/
 #payment{
     display: flex;
+    overflow-x: hidden;
+}
+#payment #paymentbox2{
+    position: fixed;
 }
 #payment #paymentbox1 h1{
     font-weight: bolder;
@@ -1452,9 +1463,9 @@ button, input, optgroup, select, textarea {
 #payment #paymentbox1 .kotak{
     align-items: center;
     border-radius: 10px;
-    border: 4px solid #18a4fc;
+    /* border: 4px solid #18a4fc; */
     width: 40vw;
-    height: 180px;
+    /* height: 180px; */
     padding: 20px;
     background-color: white;
     margin-top: 5vh;
@@ -1466,7 +1477,7 @@ button, input, optgroup, select, textarea {
     border-radius: 10px;
     border: 4px solid #18a4fc;
     width: 40vw;
-    height: 300px;
+    height: 260px;
     padding: 20px;
     background-color: white;
     margin-top : 15.8vh;
@@ -1493,6 +1504,8 @@ button, input, optgroup, select, textarea {
 #payment #paymentbox1 .kotak #paragraf h4 {
     font-weight: bolder;
     margin-bottom: 2.5vh;
+    margin-left: -1.2vw;
+    margin-top: -4vh;
 }
 #payment #paymentbox1 .kotak #paragraf h6 {
     font-weight: bolder;
@@ -1528,9 +1541,11 @@ input[type=radio] + label>img {
     transition: 0.1s all;
     margin-right: 1vw;
 }
-/* #payment #paymentbox1 #kotak #paragraf .aturtext{
-    margin-left: 19rem;
-} */
+#payment #paymentbox1 .kotak #paragraf .aturtext h5{
+    margin-left: 2vw;
+    font-size: 17px;
+    font-weight: bold;
+}
 /* ini payment membership ============================================================================= */
 #paymentmembership{
     display: flex;
@@ -1845,7 +1860,7 @@ input[type=radio] + label>img {
 }
 #paymentreceived #text h2{
     font-size: 24px;
-    padding-top: 30px;
+    padding-top: 5px;
     padding-left: 80px;
     font-family: Nunito;
     font-weight: 400;
@@ -1856,8 +1871,8 @@ input[type=radio] + label>img {
     color: #fff;
     font-weight: bold;
     font-size: 17px;
-    padding: 5px 20px;
-    margin-top: 20px;
+    padding: 4px 32px;
+    margin-top: 15px;
     margin-left: 80px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
